# flake8-for-pycharm

./: README.rst  setup.cfg
src/flake8_for_pycharm/: __init__.py  reporters.py
src/flake8_json_reporter/: reporters.py
