[metadata]
name = flake8-for-pycharm
description = Flake8 json formatter that produces output pycharm can recognize
long_description = file:README.rst
author = Ramast Magdy
author_email = ramast.com@gmail.com
url = https://gitlab.com/ramast/flake8-json
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Quality Assurance

[options]
include-package-data = True
packages = find:
python-requires = >=3.4
# NOTE(sigmavirus24): Uncomment this after
# https://github.com/pypa/setuptools/issues/1136 is fixed
# package-dir =
#     = src/

[options.packages.find]
where = src/

[options.entry_points]
flake8.report =
    pycharm = flake8_for_pycharm.reporters:DefaultJSON

[wheel]
universal = 1
